force-app/main/default/objects/Gasoline__c/Gasoline__c.object-meta.xml
<CustomObject>
    <label>ガソリンカード</label>
    <nameField>
        <label>ガソリンカード番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>