force-app/main/default/objects/Gasoline__c/fields/Available_rent__c.field-meta.xml
<CustomField>
    <fullName>Available_rent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>貸出可能</label>
    <type>Checkbox</type>
</CustomField>