force-app/main/default/objects/Gasoline__c/fields/Base__c.field-meta.xml
<CustomField>
    <fullName>Base__c</fullName>
    <label>拠点</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>本社</fullName>
            </value>
            <value>
                <fullName>阿波座オフィス</fullName>
            </value>
            <value>
                <fullName>札幌支店</fullName>
            </value>
            <value>
                <fullName>盛岡支店</fullName>
            </value>
            <value>
                <fullName>仙台支店</fullName>
            </value>
            <value>
                <fullName>栃木支店</fullName>
            </value>
            <value>
                <fullName>水戸支店</fullName>
            </value>
            <value>
                <fullName>千葉支店</fullName>
            </value>
            <value>
                <fullName>東京支店</fullName>
            </value>
            <value>
                <fullName>埼玉支店</fullName>
            </value>
            <value>
                <fullName>横浜支店</fullName>
            </value>
            <value>
                <fullName>新潟支店</fullName>
            </value>
            <value>
                <fullName>長野支店</fullName>
            </value>
            <value>
                <fullName>群馬支店</fullName>
            </value>
            <value>
                <fullName>岐阜支店</fullName>
            </value>
            <value>
                <fullName>静岡支店</fullName>
            </value>
            <value>
                <fullName>名古屋支店</fullName>
            </value>
            <value>
                <fullName>金沢支店</fullName>
            </value>
            <value>
                <fullName>京都支店</fullName>
            </value>
            <value>
                <fullName>大阪支店</fullName>
            </value>
            <value>
                <fullName>兵庫支店</fullName>
            </value>
            <value>
                <fullName>高松支店</fullName>
            </value>
            <value>
                <fullName>広島支店</fullName>
            </value>
            <value>
                <fullName>鳥取支店</fullName>
            </value>
            <value>
                <fullName>福岡支店</fullName>
            </value>
            <value>
                <fullName>熊本支店</fullName>
            </value>
            <value>
                <fullName>鹿児島支店</fullName>
            </value>
            <value>
                <fullName>沖縄支店</fullName>
            </value>
            <value>
                <fullName>北海道ヤード</fullName>
            </value>
            <value>
                <fullName>岩手ヤード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>