force-app/main/default/objects/Gasoline__c/fields/CompanyVehicle_del__c.field-meta.xml
<CustomField>
    <fullName>CompanyVehicle_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社用車</label>
    <referenceTo>CompanyVehicle__c</referenceTo>
    <relationshipLabel>ガソリンカード</relationshipLabel>
    <relationshipName>Gasoline_CompanyVehicle_del</relationshipName>
    <type>Lookup</type>
</CustomField>