force-app/main/default/objects/Gasoline__c/fields/control_no__c.field-meta.xml
<CustomField>
    <fullName>control_no__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>管理番号</label>
    <type>AutoNumber</type>
</CustomField>