force-app/main/default/objects/Gasoline__c/fields/ControlNo__c.field-meta.xml
<CustomField>
    <fullName>ControlNo__c</fullName>
    <label>旧_管理番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>