force-app/main/default/objects/Gasoline__c/fields/expiration_date__c.field-meta.xml
<CustomField>
    <fullName>expiration_date__c</fullName>
    <label>有効期限</label>
    <type>Date</type>
</CustomField>