force-app/main/default/objects/Gasoline__c/fields/shared_management__c.field-meta.xml
<CustomField>
    <fullName>shared_management__c</fullName>
    <label>共有管理物</label>
    <length>50</length>
    <type>Text</type>
</CustomField>