force-app/main/default/objects/Gasoline__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Canceled__c</columns>
    <columns>NAME</columns>
    <columns>shared_management__c</columns>
    <columns>User__c</columns>
    <columns>spare__c</columns>
    <columns>Base__c</columns>
    <columns>expiration_date__c</columns>
    <columns>remarks__c</columns>
    <columns>Available_rent__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>