force-app/main/default/objects/Gasoline__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>ControlNo__c</columns>
    <columns>NAME</columns>
    <columns>Available_rent__c</columns>
    <columns>remarks__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_rent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>貸出可能カード</label>
    <sharedTo>
        <role>Legal</role>
    </sharedTo>
</ListView>