force-app/main/default/objects/Gasoline__c/listViews/View1.listView-meta.xml
<ListView>
    <fullName>View1</fullName>
    <columns>NAME</columns>
    <columns>Available_rent__c</columns>
    <columns>ControlNo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Available_rent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>テスト貸出可能</label>
</ListView>