force-app/main/default/objects/Gasoline__c/listViews/View3.listView-meta.xml
<ListView>
    <fullName>View3</fullName>
    <columns>ControlNo__c</columns>
    <columns>NAME</columns>
    <columns>Base__c</columns>
    <columns>User__c</columns>
    <columns>shared_management__c</columns>
    <columns>spare__c</columns>
    <columns>remarks__c</columns>
    <columns>expiration_date__c</columns>
    <columns>Canceled__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Canceled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>保有中のカード（＝解約済以外）</label>
</ListView>